force-app/main/default/objects/Recommandation__c/Recommandation__c.object-meta.xml
<CustomObject>
    <label>Recommandation</label>
    <nameField>
        <label>Recommandation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recommandations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>