force-app/main/default/objects/Recommandation__c/fields/Periodicite__c.field-meta.xml
<CustomField>
    <fullName>Periodicite__c</fullName>
    <label>Periodicite (Jours)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>